# epson-backend

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  epson-backend.sln  epson-backend.spec  epson-backend.spec.in  libtool  m4-macros
daemon/: Makefile  Makefile.am  Makefile.in  cbtd.c  cbtd.h  cbtd_comserv.c  cbtd_datatrans.c  cbtd_def.h  cbtd_setup.c  cbtd_signal.c  cbtd_thread.c  cbtd_thread.h  cbtd_wrapper.c  cbtd_wrapper.h  daemon_osdef.h  daemon_osfunc.c  daemon_osfunc.h  ecbd  ecbt_lcl.h  ecbteg.c  ecbteg.h  epmnt.c  epson-typdefs.h  libcbt.h
daemon/rc/: Makefile  Makefile.am  Makefile.in  ecbd.in  inst-rc_d.sh  inst-rc_d.sh.in
debian/: changelog  control  dirs  docs  epson-backend.substvars  files  postinst  prerm  rules
debian/epson-backend/DEBIAN/: control  md5sums  postinst  prerm
debian/epson-backend/usr/lib/cups/backend/: ecblp
debian/epson-backend/usr/lib/epson-backend/: ecbd
debian/epson-backend/usr/lib/epson-backend/rc.d/: ecbd  init-functions
debian/epson-backend/usr/lib/epson-backend/scripts/: inst-cups-post.sh
debian/epson-backend/usr/share/doc/epson-backend/: copyright
epson-backend/: daemon-osdef.h  daemon-osfunc.c  daemon-osfunc.h  daemon_osdef.h  epson-backend.vcxproj  epson-backend.vcxproj.filters  epson-command.c  epson-comserv.c  epson-daemon.c  epson-daemon.h  epson-dataparse.c  epson-dataparse.h  epson-datatrans.c  epson-def.h  epson-hw.c  epson-hw.h  epson-local.h  epson-setup.c  epson-signal.c  epson-thread.c  epson-thread.h  epson-typedefs.h  epson-types.h  epson-wrapper.c  epson-wrapper.h  epson.c  epson.h  espon-command.c  espon-hw.c  espon-hw.h  espon-lcl.h  libepson.h
libltdl/: Makefile  config.h  config.status  libtool
setup/: Makefile  Makefile.am  Makefile.in  inst-cups-post.sh.in
src/: Makefile  Makefile.am  Makefile.in  backend.c  debug.c  debug.h  def.h  ecblp  err.c  err.h  err.lo  libcutils.la  mem.c  mem.h  str.c  str.h  str.lo
src/.libs/: libcutils.la
